src/parser_tests/tests_input/unit/good/Good02.ty
immutable class Student {
}

mutable class Person {
}
