src/parser_tests/tests_input/unit/bad/Bad56.ty
mutable class Student { 
    values: age: Int;    
}
